
[package]
name = "darcy-vulkan-tutorial-rust"
version = "1.0.0"
edition = "2018"
authors = ["unknownue <usami-ssc@protonmail.com>"]

[dependencies]
#winit     = "0.20.0"
winit     = { git = "https://github.com/rust-windowing/winit.git" }
ash       = "0.29.0"
num       = "0.2"
cgmath    = "0.17.0"
image     = "0.22"
memoffset = "0.5.1"
tobj      = "0.1.10"

[dependencies.bitflags]
version = ">= 1.0.4"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"
objc  = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "darcy"
path = "src/bin.rs"

[workspace]
members = [
    "tutorial"
]
